--- a/css/style.css
+++ b/css/style.css
@@ -6599,4 +6599,371 @@ a {
   opacity: 1;
   background-color: #84a0c1;
 }
+
+/* ============================================
+// お知らせ
+// ==========================================*/
+.lower-information_l .info__inner,
+.lower-information_d .info__inner {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+}
+.lower-information_l .info__main,
+.lower-information_d .info__main {
+  flex: 0 0 79%;
+  max-width: 950px;
+  margin-right: 4%;
+}
+.lower-information_l .info__sub,
+.lower-information_d .info__sub {
+  flex: 0 0 17%;
+  max-width: 200px;
+  position: relative;
+  z-index: 2;
+}
+.lower-information_l .info__sub .block,
+.lower-information_d .info__sub .block {
+  margin-top: 28px;
+}
+.lower-information_l .info__sub .block:first-child,
+.lower-information_d .info__sub .block:first-child {
+  margin-top: 0;
+}
+.lower-information_l .info__sub .block .head,
+.lower-information_d .info__sub .block .head {
+  font-family: "Montserrat";
+  font-weight: bold;
+  color: #1c9dd2;
+  font-size: 1.8rem;
+  border-bottom: 1px solid #1c9dd2;
+}
+.lower-information_l .info__sub .block .body .list__item:last-child::before,
+.lower-information_d .info__sub .block .body .list__item:last-child::before {
+  content: none;
+}
+.lower-information_l .info__sub .block .body .list__item a,
+.lower-information_d .info__sub .block .body .list__item a {
+  display: block;
+  padding: 8px 0;
+  position: relative;
+  padding-left: 20px;
+  transition: color 0.3s;
+}
+@media screen and (min-width: 769px) {
+  .lower-information_l .info__sub .block .body .list__item a:hover,
+.lower-information_d .info__sub .block .body .list__item a:hover {
+    color: #216cc4;
+  }
+}
+.lower-information_l .info__sub .block .body .list__item a:before,
+.lower-information_d .info__sub .block .body .list__item a:before {
+  content: "";
+  height: 1px;
+  width: 100%;
+  display: inline-block;
+  background-image: linear-gradient(to right, #adadad, #adadad 4px, transparent 4px, transparent 6px);
+  background-size: 6px 1px;
+  background-repeat: repeat-x;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.lower-information_l .info__sub .block .body .list__item a:after,
+.lower-information_d .info__sub .block .body .list__item a:after {
+  content: ">";
+  color: #1c9dd2;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 14px;
+  left: 0;
+  line-height: 1;
+}
+.lower-information_l .info__sub .block.-search .head,
+.lower-information_d .info__sub .block.-search .head {
+  border: none;
+}
+.lower-information_l .info__sub .block.-search .body .search-box,
+.lower-information_d .info__sub .block.-search .body .search-box {
+  display: flex;
+  justify-content: flex-start;
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__word,
+.lower-information_d .info__sub .block.-search .body .search-box .search__word {
+  flex: 0 0 76.5%;
+  max-width: 153px;
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__word input,
+.lower-information_d .info__sub .block.-search .body .search-box .search__word input {
+  background-color: #ddf0f8;
+  border: 1px solid #1c9dd2;
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__btn,
+.lower-information_d .info__sub .block.-search .body .search-box .search__btn {
+  flex: 0 0 47px;
+  max-width: 47px;
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder,
+.lower-information_d .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder {
+  display: block;
+  position: relative;
+  transition: opacity 0.3s;
+}
+@media screen and (min-width: 769px) {
+  .lower-information_l .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder:hover,
+.lower-information_d .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder:hover {
+    opacity: 0.7;
+  }
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder::before,
+.lower-information_d .info__sub .block.-search .body .search-box .search__btn .submit-btn-holder::before {
+  content: "";
+  display: inline-block;
+  background-image: url(../img/common/ico_search_white.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+.lower-information_l .info__sub .block.-search .body .search-box .search__btn input,
+.lower-information_d .info__sub .block.-search .body .search-box .search__btn input {
+  background-color: #1c9dd2;
+  border: 1px solid #1c9dd2;
+}
+.lower-information_l .l-main,
+.lower-information_d .l-main {
+  padding-bottom: 108px;
+}
+.lower-information_l .bubble01,
+.lower-information_d .bubble01 {
+  width: 180px;
+  position: absolute;
+  z-index: 1;
+  top: -120px;
+  right: 156px;
+  opacity: 0.4;
+  pointer-events: none;
+  -webkit-animation: waveY-20 8000ms linear 0ms infinite;
+  animation: waveY-20 8000ms linear 0ms infinite;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@media screen and (max-width: 480px) {
+  .lower-information_l .bubble01,
+.lower-information_d .bubble01 {
+    width: 120px;
+    top: 0;
+    right: 0;
+  }
+}
+.lower-information_l .bubble01 .img-box,
+.lower-information_d .bubble01 .img-box {
+  padding-top: 100%;
+}
+
+.lower-information_l .info {
+  padding-top: 80px;
+}
+.lower-information_l .info__main .category-holder dl {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.lower-information_l .info__main .category-holder .txt-category {
+  font-size: 1.8rem;
+  color: #1c9dd2;
+  font-weight: bold;
+}
+.lower-information_l .info__main .category-holder .category-desc {
+  font-size: 1.6rem;
+  margin-left: 32px;
+  position: relative;
+}
+.lower-information_l .info__main .category-holder .category-desc:before {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 16px;
+  background-color: #97999c;
+  position: absolute;
+  top: 50%;
+  left: -16px;
+  transform: translateY(-50%);
+}
+.lower-information_l .info__main .list-holder {
+  margin-top: 24px;
+}
+.lower-information_l .info__main .btn-box {
+  width: 240px;
+  height: 64px;
+  margin: 56px auto 0;
+}
+.lower-information_l .info__main .pagination {
+  margin-top: 36px;
+}
+.lower-information_l .info__main .pagination ul {
+  justify-content: center;
+}
+.lower-information_l .info__main .pagination ul li {
+  margin: 0;
+}
+.lower-information_l .info__main .pagination ul li.arrow.prev {
+  margin-right: 0;
+}
+.lower-information_l .info__main .pagination ul li.arrow.prev a {
+  border-radius: 5px 0 0 5px;
+}
+.lower-information_l .info__main .pagination ul li.arrow.next a {
+  border-radius: 0 5px 5px 0;
+}
+.lower-information_l .info__main .pagination ul li.arrow a {
+  background-color: #ddf0f8;
+  color: #1c9dd2;
+}
+@media screen and (min-width: 769px) {
+  .lower-information_l .info__main .pagination ul li.arrow a:hover {
+    background-color: #1c9dd2;
+    color: #fff;
+  }
+}
+.lower-information_l .info__main .pagination ul li.number a {
+  color: #5c5c5c;
+  border: none;
+  background-color: #ddf0f8;
+  border-radius: 0;
+}
+@media screen and (min-width: 769px) {
+  .lower-information_l .info__main .pagination ul li.number a:hover {
+    color: #fff;
+    background-color: #1c9dd2;
+  }
+}
+.lower-information_l .info__main .pagination ul li.number em {
+  background-color: #1c9dd2;
+}
+.lower-information_l .info__main .pagination ul li em {
+  border-radius: 0;
+  font-size: 1.5rem;
+  width: 48px;
+  height: 48px;
+}
+.lower-information_l .info__main .pagination ul li a {
+  font-size: 1.5rem;
+  width: 48px;
+  height: 48px;
+}
+.lower-information_l .info__list {
+  background-color: #fff;
+  box-shadow: 0 16px 24px rgba(33, 108, 196, 0.1);
+  border-radius: 10px;
+}
+.lower-information_l .info__list__item {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 40px 64px 32px 40px;
+}
+.lower-information_l .info__list__item:last-child {
+  border: none;
+}
+.lower-information_l .info__list__item .info__date {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  margin-right: 20px;
+  margin-left: 4px;
+}
+@media screen and (max-width: 768px) {
+  .lower-information_l .info__list__item .info__date {
+    margin-top: 2px;
+    margin-right: 12px;
+  }
+}
+.lower-information_l .info__list__item .info__date .txt {
+  color: #809bba;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+@media screen and (max-width: 480px) {
+  .lower-information_l .info__list__item .info__date .txt {
+    font-size: 1.4rem;
+  }
+}
+.lower-information_l .info__list__item .info__date:before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin-top: 6px;
+  background: url("../img/common/i_calendar.svg") no-repeat center/cover;
+  margin-right: 8px;
+}
+@media screen and (max-width: 480px) {
+  .lower-information_l .info__list__item .info__date:before {
+    width: 14px;
+    height: 14px;
+  }
+}
+.lower-information_l .info__list__item .info__tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+.lower-information_l .info__list__item .info__tags__item {
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 24px;
+  background: #ffe220;
+  padding: 2px 4px 0;
+  border-radius: 2px;
+}
+.lower-information_l .info__list__item .info__tags__item:not(:last-child) {
+  margin-right: 4px;
+}
+@media screen and (max-width: 768px) {
+  .lower-information_l .info__list__item .info__tags__item {
+    margin-top: 4px;
+  }
+}
+.lower-information_l .info__list__item .info__tags__item .txt {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+.lower-information_l .info__list__item .info__ttl {
+  width: 100%;
+  margin-top: 8px;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.6;
+  transition: color 400ms cubic-bezier(0.33, 1, 0.68, 1) 0ms;
+}
+@media screen and (max-width: 768px) {
+  .lower-information_l .info__list__item .info__ttl {
+    font-size: 1.7rem;
+  }
+}
+.lower-information_l .info__list__item .info__desc {
+  width: 100%;
+  margin-top: 12px;
+}
+.lower-information_l .info__list__item .link {
+  color: #1c9dd2;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+@media screen and (min-width: 769px) {
+  .lower-information_l .info__list__item .link:hover {
+    color: #216cc4;
+  }
+}
 /*# sourceMappingURL=style.css.map */
